<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">ATP</string>
    <string name="kinvey_collection_machine">MachineManage</string>
    <string name="kinvey_collection_error">MachineError</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="api_key">kid_-JOmYCvj0l</string>
    <string name="api_secret">16e0d50b09e04d81bbaf13d743e508b8</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="txt_atp_title">QUẢN LÝ PHÒNG GIẶT - ATP</string>
    <string name="txt_ok">OK</string>
    <string name="txt_cancel">Bỏ qua</string>
    <string name="txt_avoid">Huỷ bỏ</string>
    <string name="txt_more_washing">Nước giặt thêm</string>
    <string name="txt_more_softner">Nước xả thêm</string>
    <string name="txt_update">Cập nhật</string>
    <string name="txt_name_customer">Tên khách hàng</string>
    <string name="txt_more_info">Thông tin thêm</string>
    <string name="txt_total">Tổng tiền</string>
    <string name="txt_machine">Tiền giặt</string>
    <string name="txt_machine_dry">Sấy khô</string>
    <string name="txt_active_machine">Kích hoạt</string>

    <string name="text_active_ws">Bạn muốn kích hoạt máy số %s</string>
    <string name="text_ws_finish">Máy số %s đã xong</string>
    <string name="text_ws_running">Máy số %s đang hoạt động</string>
    <string name="text_unactivate">Không thể kích hoạt máy</string>
    <string name="text_another_error">Lỗi khác</string>
    <string name="text_title_error">Báo cáo sự cố máy số %s</string>
    <string name="text_machine_error">Máy số %s đang bị lỗi, bạn có muốn test thử máy không?</string>

</resources>
