<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/text_title_error"
            android:textColor="@color/light_blue"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_blue"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_unactivate"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/light_blue" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_another_error"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/light_blue" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/light_blue"
            android:maxLines="3" />

        <LinearLayout
            android:id="@+id/group_btn_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ok_dialog"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/txt_ok"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_cancel_dialog"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/txt_cancel"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>