<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/actionbar"
        layout="@layout/item_action_bar" />

    <ScrollView
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/txt_name_customer"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_cust_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/txt_more_info"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_cust_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/txt_machine"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_total_machine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="50,000d"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/txt_machine_dry"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <CheckBox
                        android:id="@+id/chk_is_dry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_total_dry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="100,000d"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/txt_more_washing"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn_decrease_washing"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="-"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_num_more_washing"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="@color/light_blue"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_increase_washing"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="+"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_total_washing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="100,000d"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/txt_more_softner"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn_decrease_softner"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="-"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_num_more_softner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="@color/light_blue"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_increase_softner"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:text="+"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_total_softner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="100,000d"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/txt_total"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_total_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="10dp"
                    android:text="200,000d"
                    android:textColor="@color/light_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:text="@string/txt_update"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:text="@string/txt_cancel"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>